première étape pour une meilleure séparation Ancestris - GenJ: - MAJ du code GenjFr qui sera ensuite renommé Ancestris - MAJ du code de genj - Suppression progressive des modifications Ancestris dans Genj
développement en cours, non terminé